# code-terminator-open

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  ENV_STATUS.md  README.en.md  README.md  README.zh-CN.md  package-lock.json  package.json  pyproject.toml
artifacts/: leader_20_queries_concurrent_fast20-rerun.json  leader_20_queries_concurrent_logverify-20q.json  leader_20_queries_real_run_r1.json  leader_20_queries_real_run_r2.json  leader_20_queries_real_run_r3.json
configs/: kimi-local-integration.dashscope.env.example  kimi-local-integration.env.example  kimi-local-integration.host-config.env.example
docs/: api.md  kimi-local-integration-artifacts.md  kimi-local-integration-checklist.md  kimi-local-integration-troubleshooting.md  kimi-local-integration.md  logging.md
ecommerce-platform/: .env.example  .gitignore  README.md  conftest.py  docker-compose.override.yml  docker-compose.yml  pytest.ini  requirements.txt  testsupport.py
scripts/: call_anthropic_api.py  check_connectivity.py  dev-backend.sh  dispatch_real_worker_task.py  kimi_local_suite_lib.py  probe_incident.py  run_20_queries_concurrent.py  run_20_queries_real.py  run_kimi_local_integration.py  run_kimi_local_integration.sh  run_kimi_local_suite.py  run_kimi_worker_contract_local.py  start_workspace_docker.sh
src/: __init__.py  main.py  runtime_settings.py
tests/: test_api_integration.py  test_graph_smoke.py  test_hook_pump.py  test_kimi_local_integration.py  test_kimi_local_integration_helpers.py  test_kimi_local_suite_lib.py  test_leader_chat_mode.py  test_leader_event_runtime.py  (+6 more)
(+145 files in other folders)
